Refactor MetaspaceOom for better clarity and structure